Added example output.